--- a/jarlotte-mojo/pom.xml
+++ b/jarlotte-mojo/pom.xml
@@ -40,6 +40,20 @@
             <artifactId>scala-library</artifactId>
             <version>${scala.version}</version>
         </dependency>
+
+        <dependency>
+            <groupId>net.lingala.zip4j</groupId>
+            <artifactId>zip4j</artifactId>
+            <version>1.3.2</version>
+        </dependency>
+
+        <dependency>
+            <groupId>name.felixbecker</groupId>
+            <artifactId>jarlotte-loader</artifactId>
+            <version>${project.version}</version>
+            <!-- Add as dependency to be sure that it builds before -->
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 
     <build>
