--- a/jarlotte-packagetest/pom.xml
+++ b/jarlotte-packagetest/pom.xml
@@ -8,10 +8,14 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
+    <packaging>war</packaging>
 
     <artifactId>jarlotte-packagetest</artifactId>
 
     <build>
+
+        <finalName>custom-finalname-for-war</finalName>
+
         <plugins>
             <plugin>
                 <groupId>name.felixbecker</groupId>
@@ -19,12 +23,14 @@
                 <version>${project.version}</version>
 
                 <configuration>
-                    <initializerClass>name.felixbecker.jarlotte.jettyinitializer.Iniitalizer</initializerClass>
+
                     <initializerArtifact>
                         <groupId>org.icefaces</groupId>
                         <artifactId>icefaces-facelets</artifactId>
                         <version>1.8.2</version>
                     </initializerArtifact>
+                    <initializerClass>name.felixbecker.jarlotte.jettyinitializer.Iniitalizer</initializerClass>
+
                 </configuration>
                 <executions>
                     <execution>
