--- a/pom.xml
+++ b/pom.xml
@@ -4,12 +4,19 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <packaging>pom</packaging>
+
     <modules>
         <module>jarlotte-mojo</module>
         <module>jarlotte-packagetest</module>
         <module>jarlotte-jettyinitializer</module>
         <module>jarlotte-api</module>
+        <module>jarlotte-loader</module>
     </modules>
+
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    </properties>
+
     <groupId>name.felixbecker</groupId>
     <artifactId>jarlotte</artifactId>
     <version>1.0-SNAPSHOT</version>
