--- a/jarlotte-packagetest/pom.xml
+++ b/jarlotte-packagetest/pom.xml
@@ -52,6 +52,12 @@
             <artifactId>wicket-core</artifactId>
             <version>7.1.0</version>
         </dependency>
+        <dependency>
+            <groupId>name.felixbecker</groupId>
+            <artifactId>jarlotte-jettyinitializer</artifactId>
+            <version>${project.version}</version>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 
 </project>
