--- a/pom.xml
+++ b/pom.xml
@@ -21,5 +21,17 @@
     <artifactId>jarlotte</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+    <distributionManagement>
+        <repository>
+            <id>c4c-releases</id>
+            <name>coding4coffee.org Release Repository</name>
+            <url>http://nexus.coding4coffee.org/content/repositories/releases</url>
+        </repository>
+        <snapshotRepository>
+            <id>c4c-snapshots</id>
+            <name>coding4coffee.org Snapshots Repository</name>
+            <url>http://nexus.coding4coffee.org/content/repositories/snapshots</url>
+        </snapshotRepository>
+    </distributionManagement>
 
 </project>
