Cleaned up code and logging

--- a/jarlotte-packagetest/pom.xml
+++ b/jarlotte-packagetest/pom.xml
@@ -14,7 +14,7 @@
 
     <build>
 
-        <finalName>custom-finalname-for-war</finalName>
+        <finalName>packagingtest</finalName>
 
         <plugins>
             <plugin>
