--- a/pom.xml
+++ b/pom.xml
@@ -37,7 +37,17 @@
     <scm>
         <connection>scm:git:git@github.com:fbe/jarlotte.git</connection>
         <developerConnection>scm:git:git@github.com:fbe/jarlotte.git</developerConnection>
-	<tag>HEAD</tag>
+        <tag>HEAD</tag>
     </scm>
+
+    <build>
+        <plugins>
+            <plugin>
+                <artifactId>maven-release-plugin</artifactId>
+                <groupId>org.apache.maven.plugins</groupId>
+                <version>2.5.3</version>
+            </plugin>
+        </plugins>
+    </build>
 
 </project>
