Added jetty.port property and jsp support

--- a/jarlotte-jettyinitializer/pom.xml
+++ b/jarlotte-jettyinitializer/pom.xml
@@ -25,6 +25,16 @@
             <version>${jetty.version}</version>
         </dependency>
         <dependency>
+            <groupId>org.eclipse.jetty</groupId>
+            <artifactId>jetty-annotations</artifactId>
+            <version>${jetty.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.eclipse.jetty</groupId>
+            <artifactId>apache-jsp</artifactId>
+            <version>${jetty.version}</version>
+        </dependency>
+        <dependency>
             <groupId>name.felixbecker</groupId>
             <artifactId>jarlotte-api</artifactId>
             <version>${project.version}</version>
