--- a/jarlotte-packagetest/src/main/webapp/WEB-INF/web.xml
+++ b/jarlotte-packagetest/src/main/webapp/WEB-INF/web.xml
@@ -18,7 +18,7 @@
 
     <servlet-mapping>
         <servlet-name>HelloServlet</servlet-name>
-        <url-pattern>/*</url-pattern>
+        <url-pattern>/helloServlet</url-pattern>
     </servlet-mapping>
 
 </web-app>
