Moved the jarlotte the metacoder.de namespace
Jarlotte is now a metacoder.de project (metacoder-de on github).
Refactored packages, classes and poms

--- a/jarlotte-mojo/pom.xml
+++ b/jarlotte-mojo/pom.xml
@@ -2,7 +2,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <artifactId>jarlotte</artifactId>
-        <groupId>name.felixbecker</groupId>
+        <groupId>de.metacoder</groupId>
         <version>1.3-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
@@ -46,7 +46,7 @@
         </dependency>
 
         <dependency>
-            <groupId>name.felixbecker</groupId>
+            <groupId>de.metacoder</groupId>
             <artifactId>jarlotte-loader</artifactId>
             <version>${project.version}</version>
             <!-- Add as dependency to be sure that it builds before -->
