--- a/jarlotte-jettyinitializer/pom.xml
+++ b/jarlotte-jettyinitializer/pom.xml
@@ -2,7 +2,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <artifactId>jarlotte</artifactId>
-        <groupId>name.felixbecker</groupId>
+        <groupId>de.metacoder</groupId>
         <version>1.3-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
@@ -35,7 +35,7 @@
             <version>${jetty.version}</version>
         </dependency>
         <dependency>
-            <groupId>name.felixbecker</groupId>
+            <groupId>de.metacoder</groupId>
             <artifactId>jarlotte-api</artifactId>
             <version>${project.version}</version>
         </dependency>
