--- a/jarlotte-packagetest/pom.xml
+++ b/jarlotte-packagetest/pom.xml
@@ -2,7 +2,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <artifactId>jarlotte</artifactId>
-        <groupId>name.felixbecker</groupId>
+        <groupId>de.metacoder</groupId>
         <version>1.3-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
@@ -16,19 +16,19 @@
 
         <plugins>
             <plugin>
-                <groupId>name.felixbecker</groupId>
+                <groupId>de.metacoder</groupId>
                 <artifactId>jarlotte-mojo</artifactId>
                 <version>${project.version}</version>
 
                 <configuration>
 
                     <initializerArtifact>
-                        <groupId>name.felixbecker</groupId>
+                        <groupId>de.metacoder</groupId>
                         <artifactId>jarlotte-jettyinitializer</artifactId>
                         <version>${project.version}</version>
                     </initializerArtifact>
 
-                    <initializerClass>name.felixbecker.jarlotte.jettyinitializer.Initializer</initializerClass>
+                    <initializerClass>de.metacoder.jarlotte.jettyinitializer.Initializer</initializerClass>
 
                 </configuration>
                 <executions>
@@ -51,7 +51,7 @@
             <version>7.1.0</version>
         </dependency>
         <dependency>
-            <groupId>name.felixbecker</groupId>
+            <groupId>de.metacoder</groupId>
             <artifactId>jarlotte-jettyinitializer</artifactId>
             <version>${project.version}</version>
             <scope>provided</scope>
