Run Jarlotte only when project packaging is "war"
ensure that maven war file will run by checking that the project
packaging is war.

--- a/pom.xml
+++ b/pom.xml
@@ -37,7 +37,7 @@
     <description>
         
     </description>
-    <url>https://github.com/fbe/jarlotte</url>
+    <url>https://github.com/metacoder/jarlotte</url>
 
     <developers>
         <developer>
