Use contents of extracted war-File
When using the Maven build output, files that are excluded from the war
packaging are included in the Jarlotte JAR.

Instead of using the Maven build output, the war-File is extracted and
its contents is used for packaging into the Jarlotte JAR now.

Thus, contents now equal the war file ones.

--- a/jarlotte-packagetest/pom.xml
+++ b/jarlotte-packagetest/pom.xml
@@ -16,6 +16,13 @@
 
         <plugins>
             <plugin>
+                <artifactId>maven-war-plugin</artifactId>
+                <configuration>
+                    <packagingExcludes>WEB-INF/classes/ignoredTestResource.txt</packagingExcludes>
+                </configuration>
+            </plugin>
+
+            <plugin>
                 <groupId>de.metacoder</groupId>
                 <artifactId>jarlotte-mojo</artifactId>
                 <version>${project.version}</version>
