--- a/jarlotte-jettyinitializer/pom.xml
+++ b/jarlotte-jettyinitializer/pom.xml
@@ -35,6 +35,11 @@
             <version>${jetty.version}</version>
         </dependency>
         <dependency>
+            <groupId>org.eclipse.jetty</groupId>
+            <artifactId>jetty-jmx</artifactId>
+            <version>${jetty.version}</version>
+        </dependency>
+        <dependency>
             <groupId>de.metacoder</groupId>
             <artifactId>jarlotte-api</artifactId>
             <version>${project.version}</version>
